[package]
name = "geditor"
version = "0.1.0"
authors = ["tuomas56 <pigworts2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixelengine = { path = "../pixelengine" }
simple-physics = { path = "../physics", features = ["pixelengine"] }
specs = {version = "0.16", features = ["specs-derive"] }
macro_rules_attribute = "0.0.1"