[package]
name = "m1r"
version = "0.1.0"
authors = ["tuomas56 <pigworts2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
petgraph = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
