[package]
name = "primes"
version = "0.1.0"
authors = ["tuomas56 <pigworts2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "*"

[dependencies.rug]
version = "*"
default-features = false
features = ["integer"]